# 2022-python-lab

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: app.py  extractor.py  models.py  openapi.py  responses.py  services.py
